# QtQML-YOLOApp

./: .gitignore  CMakeLists.txt  README.md  build.sh  deploy.sh  main.cpp
.agent/: README.md  manifest.json
.agent/skills/agent-architect/: SKILL.md
.agent/skills/cv-engineer/: SKILL.md
.agent/skills/devops-engineer/: SKILL.md
.agent/skills/qa-specialist/: SKILL.md
.agent/skills/qt-developer/: SKILL.md
.agent/skills/system-architect/: SKILL.md
app/: CMakeLists.txt  configure.sh  deploy.sh
app/content/: AppHeader.qml  Main.qml  PerformancePanel.qml
app/src/: main.cpp
app/src/core/: VideoController.cpp  VideoController.h
app/src/features/camera/application/: CaptureWorker.cpp  CaptureWorker.h  ImageFileController.cpp  ImageFileController.h  VideoFileController.cpp  VideoFileController.h  YoloCameraController.cpp  YoloCameraController.h
app/src/features/camera/domain/: CameraConfig.h  CameraFrame.h  ICameraSource.h  ICaptureSource.h  SourceConfig.h
app/src/features/camera/infrastructure/: OpenCVCameraSource.cpp  OpenCVCameraSource.h  OpenCVImageFileSource.cpp  OpenCVImageFileSource.h  OpenCVVideoFileSource.cpp  OpenCVVideoFileSource.h
app/src/features/detection/application/: DetectionController.cpp  DetectionController.h  InferenceWorker.cpp  InferenceWorker.h
app/src/features/detection/domain/: Detection.h  DetectionResult.h  IDetectionModel.h  InferenceConfig.h  InferenceTiming.h  TaskType.h
app/src/features/detection/infrastructure/: PostProcessor.cpp  PostProcessor.h  PreProcessor.cpp  PreProcessor.h  SimdUtils.h  YoloPipeline.cpp  YoloPipeline.h
app/src/features/detection/infrastructure/backends/: IInferenceBackend.h  OnnxRuntimeBackend.cpp  OnnxRuntimeBackend.h  OpenVinoBackend.cpp  OpenVinoBackend.h
app/src/features/detection/ui/: DetectionListModel.cpp  DetectionListModel.h  DetectionOverlayItem.cpp  DetectionOverlayItem.h
app/src/features/monitoring/application/: MonitoringController.cpp  MonitoringController.h  SystemMonitorWorker.cpp  SystemMonitorWorker.h
app/src/features/monitoring/domain/: ISystemMonitor.h  SystemStats.h
app/src/features/monitoring/infrastructure/: SystemMonitorInfra.cpp  SystemMonitorInfra.h  WindowsSystemMonitor.cpp  WindowsSystemMonitor.h
app/src/models/: DetectionListModel.h  DetectionStruct.h
app/src/pipeline/: PostProcessor.cpp  PostProcessor.h  PreProcessor.cpp  YoloPipeline.cpp  YoloPipeline.h  YoloTypes.h
app/src/shared/application/: AppController.cpp  AppController.h
app/src/shared/domain/: .keep  AppConfig.h  UiLogger.h
app/src/ui/: AppHeader.qml  CustomComboBox.qml  Main.qml  MetricItem.qml  PlaybackControls.qml  YoloOverlay.qml
app_backup/: CMakeLists.txt  build.sh
app_backup/content/: Main.qml
app_backup/src/models/: DetectionListModel.cpp
app_backup/src/pipeline/: PostProcessor.h  PreProcessor.h  YoloPipeline.cpp
app_backup/src/pipeline/backends/: IInferenceBackend.h  OpenVinoBackend.cpp  OpenVinoBackend.h
app_backup/src/ui/: DetectionOverlayItem.cpp  DetectionOverlayItem.h
assets/openvino/detection/: metadata.yaml  yolov8n-new.xml  yolov8n.xml
assets/openvino/pose/: metadata.yaml  yolov8n-pose.xml
assets/openvino/segmentation/: metadata.yaml  yolov8n-seg.xml
content/: Main.qml
docs/: 1-1_architecture-migration.md  1_clean-architecture.md  2_feature-ui-interaction-logger.md  3_dual-input-source.md  4_image-input-source.md  5_frame-synchronization.md  6_video-playback-controls.md  DEVELOPMENT_PLAN_PHASES.md  PHASE1_SKETCH.md  PHASE2_SKETCH.md  PHASE3_SKETCH.md  PHASE4_SKETCH.md  README_RELEASE.md  architecture_evaluation.md  blob_from_image.md  class-reference.md  design-spec.md  dod.md  memory-and-dataflow-analysis.md  openvino-integration-plan.md  personas.md  postprocessing2.md  postprocessing_optimization.md  prd.md  project-structure.md  resolution-plan.md  simd_optimization_evaluation.md  tech-stack.md  two-pass_architecture_plan.md
docs/evaluation/: camera_and_inference_fps_differentiation.md  cross_platform_portability_strategy.md  inference_speed_evaluation.md  memory-and-dataflow-analysis.md  postprocessing2.md  simd_optimization_evaluation.md  two-pass_architecture_plan.md
inference/: yolov8n.xml
src/: BoundingBoxItem.cpp  BoundingBoxItem.h  DetectionListModel.cpp  DetectionListModel.h  DetectionStruct.h  OpenCVItem.cpp  OpenCVItem.h  SystemMonitor.cpp  SystemMonitor.h  VideoController.cpp  VideoController.h  inference.cpp  inference.h
src/core/: SystemMonitor.h  VideoController.cpp  VideoController.h
src/inference/: inference.cpp  inference.h  inference_postprocess.cpp
src/models/: DetectionListModel.cpp
src/pipeline/: PostProcessor.cpp  PostProcessor.h  PreProcessor.cpp  PreProcessor.h  YoloTypes.h  inference.cpp  inference.h  inference_backend.h  onnxruntime_backend.cpp  onnxruntime_backend.h  openvino_backend.cpp  openvino_backend.h  postprocess.cpp  postprocess.h  preprocess.cpp  preprocess.h  simd_utils.h  yolo_types.h
src/pipeline/backends/: OnnxRuntimeBackend.cpp  OnnxRuntimeBackend.h
src/ui/: BoundingBoxItem.cpp
